welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:5: error: not found: value avancer
def faireV () {avancer(2) ; marqueSol() ; avance() ; gauche() ; avance() ; marquerSol() ; recule() ; droite() ; avance() ; marquerSol() ; avance(2) ; gauche() ;
               ^PictureMono1:5: error: not found: value marquerSol
def faireV () {avancer(2) ; marqueSol() ; avance() ; gauche() ; avance() ; marquerSol() ; recule() ; droite() ; avance() ; marquerSol() ; avance(2) ; gauche() ;
                                                                           ^PictureMono1:5: error: not found: value marquerSol
def faireV () {avancer(2) ; marqueSol() ; avance() ; gauche() ; avance() ; marquerSol() ; recule() ; droite() ; avance() ; marquerSol() ; avance(2) ; gauche() ;
                                                                                                                           ^