welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
override def run() {
}
def marqueSol() {baisseBrosse() ; leveBrosse();}

def faireV () {avancer(2) ; marqueSol() ; avance() ; gauche() ; avance() ; marquerSol() ; recule() ; droite() ; avance() ; marquerSol() ; avance(2) ; gauche() ;
  }

for (cote <- 1 to 4) {faireV()}